--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,6 +2,8 @@ SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
 VERILOG_SOURCES += $(PWD)/../hdl/dut.v
 VERILOG_SOURCES += $(PWD)/wrappers/xor_test.v
-TOPLEVEL = xor_test
-MODULE = dut_test
+xor:
+	rm -rf sim_build
+	$(MAKE) sim MODULE=dut_test TOPLEVEL=xor_test
 include $(shell cocotb-config --makefiles)/Makefile.sim
+
